Bug fixes. Feature: Convert LVM root to ZFS root

--- a/recipes/zquick_installer/recipe.yaml
+++ b/recipes/zquick_installer/recipe.yaml
@@ -6,4 +6,7 @@ xbps-packages:
  - pv
  - pax
  - findutils
+ - rsync
+ - util-linux
+ - hdparm
 help: "Download and install proxmox to root partition"
