--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Push OCI package to registry
         run: ./zquickinit.sh builder --githubaction --push --tag ghcr.io/midzelis/zquickinit:latest --tag ghcr.io/midzelis/zquickinit:${{ steps.tag_version.outputs.new_tag }}
       - name: Build initramfs
-        run: ./zquickinit.sh initramfs --noask --release
+        run: ./zquickinit.sh initramfs --no-ask --release
       - name: Build ISO
         run: sudo apt-get install -y mtools xorriso coreutils findutils && ./zquickinit.sh iso
       - name: Create a GitHub release
