--- a/recipes/zquick_loadkey/recipe.yaml
+++ b/recipes/zquick_loadkey/recipe.yaml
@@ -1,4 +1,4 @@
 xbps-packages:
- - pax
+ - libarchive-tools
  - zstd
 help: "Prompts to unlock encrypted ZFS dataset. Then injects the passphrase into the boot environment to prevent prompting twice. " 
