--- a/recipes/zquick_tmux/fs/etc/tmux.conf
+++ b/recipes/zquick_tmux/fs/etc/tmux.conf
@@ -5,18 +5,18 @@ set -g default-shell /bin/bash
 set -g mouse on
 set-window-option -g alternate-screen off
 
-set -g base-index 1           # start windows numbering at 1
-setw -g pane-base-index 1     # make pane numbering consistent with windows
+set -g base-index 1       # start windows numbering at 1
+setw -g pane-base-index 1 # make pane numbering consistent with windows
 
-setw -g automatic-rename on   # rename window to reflect current program
-set -g renumber-windows on    # renumber windows when a window is closed
+setw -g automatic-rename on # rename window to reflect current program
+set -g renumber-windows on  # renumber windows when a window is closed
 
-set -g set-titles on          # set terminal title
+set -g set-titles on # set terminal title
 
 set -g display-panes-time 800 # slightly longer pane indicators display time
 set -g display-time 1000      # slightly longer status messages display time
 
-set -g status-interval 1      # redraw status line every second
+set -g status-interval 1 # redraw status line every second
 
 ######################
 ### DESIGN CHANGES ###
@@ -56,3 +56,11 @@ setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
 
 # messages
 set -g message-style 'fg=colour232 bg=colour16 bold'
+
+# toggle mouse mode to allow mouse copy/paste
+# set mouse on with prefix m
+bind m \
+    set -g mouse on \; display 'Mouse: ON'
+# set mouse off with prefix M
+bind M \
+    set -g mouse off \; display 'Mouse: OFF'
