--- a/recipes/zquick_core/recipe.yaml
+++ b/recipes/zquick_core/recipe.yaml
@@ -8,7 +8,8 @@ xbps-packages:
   - busybox-huge
   - util-linux
   - pciutils
-  - lshw - nss_wrapper
+  - lshw
+  - nss_wrapper
 debian-packages:
   - kbd
 help: "Required common dependencies to all recipes"
